# WebArticleCurator

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  config_blikk__2009_01_21__2018_03_22.json  config_index.json  corpus_converter.py  enhanced_downloader.py  extractor.py  input_constants_wrapper.py  logger.py  main.py  news_archive_crawler.py  news_article_crawler.py  news_crawler.py  pyproject.toml  requirements.txt  setup.py  site_schemas.json  tags.json
configs/: config_24hu.yaml  config_24hu_belfold.yaml  config_24hu_belfold1.yaml  config_24hu_belfold2.yaml  config_24hu_gazdasag.yaml  config_24hu_kulfold.yaml  config_24hu_rest.yaml  config_24hu_rest1.yaml  config_24hu_rest2.yaml  config_24hu_rest3.yaml  config_444.yaml  config_444__2018_04_07__2018_04_08.json  config_444__2018_04_07__2018_04_08.yaml  config_888.yaml  config_abcug.yaml  config_alfahir.yaml  config_atlatszo_ro.yaml  config_atv.yaml  config_bbeacon.yaml  config_blikk.yaml  config_blikk__2009_01_21__2018_03_22.json  config_blikk__2009_01_21__2018_03_22.yaml  config_demokrata.yaml  config_eduline.yaml  config_epiteszforum.yaml  config_feol.yaml  config_forum_index.yaml  config_forumportfolio.yaml  config_foter.yaml  config_gov_koronavirus.yaml  config_greenfo.yaml  config_hang.yaml  config_hataratkelo.yaml  config_hirado.yaml  config_hvg.yaml  config_index.json  config_index.yaml  config_index_koronavirus.yaml  config_istentudja_24hu.yaml  config_jogtar.json  (+79 more)
configs/aio/: doc_extractor_example.py  europarl.py
configs/extractors/: corpus_converters.py  htro_site_specific_extractor_functions.py  origo_link_fixer_dict.py  site_specific_extractor_fun_kremmania.py  site_specific_extractor_functions.py  site_specific_extractor_functions_epitesz.py  site_specific_extractor_functions_forum_blog.py  site_specific_extractor_functions_hataratkelo.py  site_specific_extractor_functions_htro.py  site_specific_extractor_functions_kuruc_vadh.py  site_specific_extractor_functions_kurucinfo_vadh.py  site_specific_extractor_functions_news_ngvmt.py  site_specific_extractor_functions_news_pgvmt.py  site_specific_extractor_functions_npdn.py  site_specific_extractor_functions_pestisracok.py  site_specific_extractor_functions_szng.py  site_specific_extractor_functions_termvil.py  site_specific_extractor_functions_utazomajom.py
configs/mno/: config_mno.yaml  config_mno_ahelyzet.yaml  config_mno_belfold.yaml  config_mno_gazdasag.yaml  (+4 more)
corpusbuilder/: __init__.py  __main__.py  corpus_converter.py  enhanced_downloader.py  extractor.py  extractor_functions.py  input_constants_wrapper.py  logger.py  news_archive_crawler.py  news_article_crawler.py  news_crawler.py  site_specific_extractor_functions.py  utils.py  version.py
docs/: CONTRIBUTING.md
webarticlecurator/: __init__.py  __main__.py  enhanced_downloader.py  logger.py  news_crawler.py  other_modes.py  site_schema.yaml  utils.py  version.py
(+139 files in other folders)
